--- a/main.html
+++ b/main.html
@@ -10,6 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="hero">
+		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+	<div>
+		<h1>Welcome to my Pinterest clone</h1>
+		<p>Your task is to create a hero section similar to that of Pinterest using the box model in CSS. </p>
+		<button type="button">Explore Now</button>
+	</div>
 
 </body>
 
